tests/baselines/reference/parserClassDeclaration14.errors.txt
parserClassDeclaration14.ts(2,4): error TS2391: Function implementation is missing or not immediately following the declaration.
parserClassDeclaration14.ts(3,4): error TS2390: Constructor implementation is missing.


==== parserClassDeclaration14.ts (2 errors) ====
    class C {
       foo();
       ~~~
!!! error TS2391: Function implementation is missing or not immediately following the declaration.
       constructor();
       ~~~~~~~~~~~
!!! error TS2390: Constructor implementation is missing.
    }